--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,6 +10,8 @@ html,body{
     overflow-x: hidden;
 }
 
+
+
 a{
     text-decoration: none;
 }
@@ -32,8 +34,8 @@ ul{
 }
 
 .course-preview-nav{
-    background-color: #fff;
-    color: #222;
+    background-color: rgb(48, 48, 48);
+    color: #fff;
     padding: 10px 0px;
 }
 
@@ -91,7 +93,8 @@ ul{
 }
 
 .course-left{
-    background-color: #dfdfdf;
+    background-color: rgb(48, 48, 48);
+    color: #fff;
     width: 50vw;
     height: 70vh;
     display: flex;
@@ -203,7 +206,8 @@ ul{
 
 .course-outcomes{
     width: 50vw;
-    background-color: #dfdfdf;
+    background-color: rgb(48, 48, 48);
+    color: #fff;
     height: 360px;
     display: flex;
     flex-direction: column;
@@ -392,7 +396,7 @@ ul{
     }
     
     .course-left{
-        background-color: #dfdfdf;
+        background-color: rgb(48, 48, 48);
         width: 50vw;
         height: 50vh;
         display: flex;
@@ -415,7 +419,7 @@ ul{
     }
 
     .course-left{
-        background-color: #dfdfdf;
+        background-color: rgb(48, 48, 48);
         width: 50vw;
         height: 55vh;
         display: flex;
@@ -446,7 +450,7 @@ ul{
     }
 
     .course-left{
-        background-color: #dfdfdf;
+        background-color: rgb(48, 48, 48);
         width: 100vw;
         height: 55vh;
         display: flex;
@@ -522,7 +526,7 @@ ul{
     }
 
     .course-left{
-        background-color: #dfdfdf;
+        background-color: rgb(48, 48, 48);
         width: 100vw;
         height: 60vh;
         display: flex;
@@ -655,7 +659,7 @@ ul{
     }
 
     .course-left{
-        background-color: #dfdfdf;
+        background-color: rgb(48, 48, 48);
         width: 100vw;
         height: 70vh;
         display: flex;
@@ -866,7 +870,7 @@ ul{
     }
 
     .course-left{
-        background-color: #dfdfdf;
+        background-color: rgb(48, 48, 48);
         width: 100vw;
         height: 95vh;
         display: flex;
